# KernelSecurityBenchmarks

KernelSecurityBenchmark/: pyproject.toml
KernelSecurityBenchmark/kernsecbench/: __init__.py  benchmark.py  cli.py  microwave_wrapper.py  results_analysis.py  test_configs.py
KernelSecurityBenchmark/kernsecbench/benchmarks/: build_benchmarks.py  launch.sh  launch_glibc.sh  launch_inkscape.sh  launch_kerncompile.sh  launch_lmbench.sh  launch_sqlite.sh  launch_stressng.sh
KernelSecurityBenchmark/kernsecbench/results-analysis/: all_runs_long.csv
KernelSecurityBenchmark/kernsecbench/results-analysis/raw_results_all_mit_off/: inkscape_results_0.txt  inkscape_results_1.txt  (+4 more)
Microwave/: pyproject.toml
Microwave/microwave2/: __init__.py  cli.py  controller.py  local_storage.py  remote.py  report.py
Microwave/microwave2/images/: disk_image.py  raw_image.py  test_image_old.py  ubuntu_image.py  ubuntu_resources.py
Microwave/microwave2/results/: kernel_log.py  result.py
Microwave/microwave2/runners/: construct.py  kernel_log_runner.py  mem_dump_runner.py  runner.py
Microwave/microwave2/targets/: kernel_module_target.py  kernel_module_target_old.py  kernel_target.py  kernel_target_old.py  linux_ref.py  raw_os_target.py  target.py
Microwave/microwave2/testers/: kernel_tester.py  module_tester.py  raw_os_tester.py  tester.py
Microwave/microwave2/tests/: linux_test.py  static_test.py  test.py
Microwave/microwave2/utils/: compile_link.py  kernel_config.py  linux_kernel.py  linux_make.py  log.py  make_progress.py  minimized_x86.config  qemu.py  rsync.py  utils.py
(+198 files in other folders)
